# pdf-qna

./: README.md  pyproject.toml
app/: api.py  ingest_data.py  pipeline.py  run_terminal.py  streamlit.py
app/core/: config.py  logger.py  pipeline.py
notebook/: test.ipynb
